# pyatb-lsp

./: .gitignore  .governance-kit.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.md  log.md  lsp-capabilities.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_task.yml  bug.yml  config.yml  feature.yml
.github/workflows/: agent-review.yml  ci.yml  pr-contract.yml  testpypi-release.yml
diagnostics/: diagnostic-engine-v1.schema.json
docs/: LLM-WIKI-PLAN.md  TRACEABILITY.md  VERSIONED_PIPELINE.md  index.md  log.md  testpypi-release.md
docs/raw/assets/: DIAGNOSTIC_ENGINE_V1.md  server.py
docs/wiki/concepts/: diagnostic-contract.md  formatter-design.md  testing-strategy.md
docs/wiki/entities/: band-dos.md  conductivity-spin.md  hr-sr-files.md  kmesh-kpath.md  output-config.md
docs/wiki/synthesis/: diagnostic-codes.md
raw/assets/: analyzer.py  manifest.json  pyatb-abacus-integration.md  pyatb-examples.md  pyatb-input-reference.md  pyatb-introduction.md  pyatb-official-docs.json  pyatb-readme.md  pyatb-related-tools.md  pyatb-theory.md  pyatb-transport-implementation.md  source-provenance.json
reports/: docstring-wiki-raw-traceability.json
scripts/: build-testpypi-artifacts.sh  check_docstring_traceability.py  cleanup_merged_worktrees.sh  format.sh  install.sh  lint.sh  start_issue_worktree.sh  test.sh  typecheck.sh  update_official_pipeline.py  upload-testpypi.sh
skill/: SKILL.md  skill.yaml
skill/references/: README.md
src/pyatb_lsp/: __init__.py  agent_lsp.py  agent_operations.py  analyzer.py  cli.py  diagnostics.py  fix_preview.py  preflight.py  rich_diagnostics.py  server.py  skill_export.py  tool.py
src/pyatb_lsp/schema/: __init__.py  official_rules.py  pyatb_rules.json
tests/: test_agent_lsp.py  test_analyzer.py  test_cli.py  test_closed_loop_fixtures.py  test_diagnostics.py  test_docstring_traceability.py  test_official_pipeline.py  test_openqc_smoke.py  test_preflight.py  test_rich_diagnostics_contract.py  test_server.py  test_tool.py
tests/fixtures/: complete_valid.py  has_output.py  invalid_config.json  missing_import.py  missing_output.py  missing_symbols.py  no_structure.py  valid_pyatb.py
tests/fixtures/invalid/: empty_file.py  just_print.py  missing_hr_dat.py  missing_sr_dat.py  missing_structure_ref.py  no_output_path.py  syntax_error.py
tests/fixtures/preflight/bad_config/: config.json  workflow.py
tests/fixtures/preflight/bad_config/.pyatb-lsp/: fixtures.json
tests/fixtures/preflight/coarse_kmesh/: workflow.py
tests/fixtures/preflight/coarse_kmesh/.pyatb-lsp/: fixtures.json
tests/fixtures/preflight/missing_config/: workflow.py
tests/fixtures/preflight/missing_config/.pyatb-lsp/: fixtures.json
tests/fixtures/preflight/missing_hr/: workflow.py
tests/fixtures/preflight/ntype_keyword_mismatch/: workflow.py
tests/fixtures/preflight/valid_boltzmann/: config.json  workflow.py
tests/fixtures/valid/: minimal_valid.py  with_output_path.py  with_sr_dat.py  with_tb_alias.py  with_tightbinding.py
wiki/: index.md  log.md
wiki/concepts/: abacus-integration.md  agent-json.md  berry-phase-geometry.md  boltzmann-transport.md  completion-hover.md  diagnostic-contract.md  diagnostic-engine-v1.md  formatter-design.md  input-file-format.md  lsp-architecture.md  matmaster-workflow.md  testing-strategy.md
wiki/entities/: band-dos.md  conductivity-spin.md  hr-sr-files.md  kmesh-kpath.md  output-config.md  pyatb-package.md  tightbinding.md
wiki/synthesis/: cli-reference.md  code-actions.md  diagnostic-codes.md  log-parser.md  openqc-agent-context.md  quickstart.md  transport-coefficient-guide.md  validation-rules.md
(+4 files in other folders)
